--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="/RISHI'S PORTFOLIO/assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./RISHI'S PORTFOLIO/assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
