--- a/index.html
+++ b/index.html
@@ -723,6 +723,24 @@
               </a>
             </li>
 
+              <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://rishikoushikrajana.github.io/Ticket-Booking/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./RISHI'S PORTFOLIO/assets/images/project-8.png" alt="Ticket-booking" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ticket Booking</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
 
              <li class="project-item  active" data-filter-item data-category="applications">
               <a href="https://rishikoushikrajana.github.io/Tindog-project/index.html">
