--- a/index.html
+++ b/index.html
@@ -350,46 +350,46 @@
 
 
 
-        <!--
+       <!--
           - Skills
         -->
 
-        <section class="Skills">
+       
+        <section class="clients">
 
-          <h3 class="h3 clients-title">skills</h3>
+          <h3 class="h3 clients-title">Skills</h3>
 
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.w3schools.com/html/">
                 <img src="./RISHI'S PORTFOLIO/assets/images/logo1.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.w3schools.com/css/">
                 <img src="./RISHI'S PORTFOLIO/assets/images/logo2.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.w3schools.com/js/">
                 <img src="./RISHI'S PORTFOLIO/assets/images/logo3.png" alt="client logo">
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="#">
+             <li class="clients-item">
+              <a href="https://www.w3schools.com/mysql/">
                 <img src="./RISHI'S PORTFOLIO/assets/images/logo4.png" alt="client logo">
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="#">
+             <li class="clients-item">
+              <a href="https://www.w3schools.com/python/">
                 <img src="./RISHI'S PORTFOLIO/assets/images/logo5.png" alt="client logo">
               </a>
             </li>
-        
 
           </ul>
 
