--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <h4 class="h4 service-item-title">Web developer</h4>
 
                 <p class="service-item-text">
-                  The most modern design made at a intermediate level.
+                  The most modern design is made at an intermediate level.
                 </p>
               </div>
 
@@ -259,14 +259,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./RISHI'S PORTFOLIO/assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./RISHI'S PORTFOLIO/assets/images/icon-dev.svg" alt=" Web development icon" width="40">
               </div>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web developer</h4>
+            <div class="service-content-box">
+                <h4 class="h4 service-item-title">UI/UX Design</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the Intermediate level.
+                  The most modern and high-quality design is made at an affordable level.
                 </p>
               </div>
 
@@ -275,7 +275,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./RISHI'S PORTFOLIO/assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./RISHI'S PORTFOLIO/assets/images/icon-app.svg" alt=" mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -333,7 +333,7 @@
                 <img src="./RISHI'S PORTFOLIO/assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
               </figure>
 
-              <img src="./RISHI'S PORTFOLIO/assets/images/icon-quote.svg" alt="quote icon">
+              <img src="./RISHI'S PORTFOLIO/assets/images/icon-quote.svg" alt=" quote icon">
             </div>
 
             <div class="modal-content">
@@ -346,7 +346,7 @@
                 <p>
                   Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                   lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                  and is very concerned about the needs of the client. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
                   elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                 </p>
