--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web developer</h4>
+                <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  The most modern design is made at an intermediate level.
+                  High-quality development of sites at the professional level.
                 </p>
               </div>
 
@@ -262,13 +262,14 @@
                 <img src="./RISHI'S PORTFOLIO/assets/images/icon-dev.svg" alt=" Web development icon" width="40">
               </div>
 
-            <div class="service-content-box">
+           <div class="service-content-box">
                 <h4 class="h4 service-item-title">UI/UX Design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design is made at an affordable level.
+                  The most modern and high-quality design is made at an intermediate level.
                 </p>
               </div>
+
 
             </li>
 
