--- a/index.html
+++ b/index.html
@@ -813,7 +813,8 @@
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
-<form action="#" class="form" data-form>
+
+          <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
@@ -846,22 +847,7 @@
   <!--
     - custom js link
   -->
-  <form method="POST" id="form">
-
-    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
-
-    <input type="text" name="name" required>
-    <input type="email" name="email" required>
-    <textarea name="message" required></textarea>
-    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-
-    <button type="submit">Submit Form</button>
-
-    <div id="result"></div>
-
-</form>
-
-<script>"./RISHI'S PORTFOLIO/assets/js/script.js"</script>
+  <script src="./RISHI'S PORTFOLIO/assets/js/script.js"></script>
 
   <!--
     - ionicon link
