--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/RishikoushikRajana/online-voting-system/tree/main/online%20voting%20system">
+              <a href="https://github.com/RishikoushikRajana/ONLINE-VOTING">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -858,4 +858,5 @@
 </body>
 
 </html>
+
 
