--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./RISHI'S PORTFOLIO/assets/images/project-2.png" alt="online-voting-system" loading="lazy">
+                  <img src="./RISHI'S PORTFOLIO/assets/images/project-2.png" alt="ONLINE-VOTING" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Online-voting-system</h3>
@@ -858,5 +858,6 @@
 </body>
 
 </html>
+
 
 
