--- a/index.html
+++ b/index.html
@@ -735,6 +735,26 @@
               </a>
             </li>
 
+
+            
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/RishikoushikRajana/MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./RISHI'S PORTFOLIO/assets/images/project-9.png" alt="MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
@@ -858,6 +878,7 @@
 </body>
 
 </html>
+
 
 
 
