--- a/index.html
+++ b/index.html
@@ -640,6 +640,25 @@
             </li>
 
 
+             <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/RishikoushikRajana/MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./RISHI'S PORTFOLIO/assets/images/project-9.png" alt="MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+
             
             <li class="project-item  active" data-filter-item data-category="applications">
               <a href="https://rishikoushikrajana.github.io/The-Money-Tracker-Web-App/file.html">
@@ -738,22 +757,23 @@
 
             
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://github.com/RishikoushikRajana/MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION">
+              <a href="https://rishikoushikrajana.github.io/The-Money-Tracker-Web-App/file.html">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./RISHI'S PORTFOLIO/assets/images/project-9.png" alt="MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION" loading="lazy">
+                  <img src="./RISHI'S PORTFOLIO/assets/images/project-6.png" alt="money tracker" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MUSIC-RECOMMENDATION-USING-FACIAL-EMOTION-DETECTION</h3>
+                <h3 class="project-title">The-Money-Tracker</h3>
 
-                <p class="project-category">Web Development</p>
+                <p class="project-category">Applications</p>
 
               </a>
-            </li>
+
+            </li>>
 
           </ul>
 
@@ -878,6 +898,7 @@
 </body>
 
 </html>
+
 
 
 
